Set the correct font family for Nextpage block on mobile

--- a/packages/block-library/src/nextpage/editor.native.scss
+++ b/packages/block-library/src/nextpage/editor.native.scss
@@ -12,4 +12,5 @@
 
 .block-library-nextpage__text {
 	text-decoration-style: solid;
+	font-family: serif;
 }
